actualizacion del repositorio David

--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@300;400;500&display=swap');
 
-
+/* Estilos David */
 
 /* Variables de Diseño */
 
@@ -26,7 +26,7 @@
 
 
     /* Fuente */
-    --font: 'Outfit';
+    font: 'Outfit';
 
 }
 
